--- a/v1/package.json
+++ b/v1/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/bhanujggandhi/YelpCamp#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1"
   }
